--- a/references.bib
+++ b/references.bib
@@ -807,3 +807,12 @@ optabstract = {When researchers develop new econometric methods it is common pra
       url={https://arxiv.org/abs/2102.08921}, 
 }
 
+@misc{petrakos_2025,
+      title={A Framework for Generating Realistic Synthetic Tabular Data in a Randomized Controlled Trial Setting}, 
+      author={Niki Z. Petrakos and Erica E. M. Moodie and Nicolas Savy},
+      year={2025},
+      eprint={2501.17719},
+      archivePrefix={arXiv},
+      primaryClass={stat.OT},
+      url={https://arxiv.org/abs/2501.17719}, 
+}
